ffi: migrate to java.lang.foreign and require Java 21